Mon Oct 16 10:45:47 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/packages.c: Hack up things so a package which
    provides/conflicts/replaces it's own virtual can be installed (can't
    be removed yet, but hey...)

Sat Oct  7 22:18:43 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 

  * po/gl.po, configure.in: add new Galish translation from  Alberto Garcia
  * po/pt_BR.po, configure.in: add new Brazilian translation from
    Carlos Laviola
  * THANKS: add Alberto and Carlos

Wed Oct  4 16:37:08 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 

  * main/processarc.c: read trailing zeroes from tar output

Tue 03 Oct 23:13:59 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Sun Oct  1 20:09:42 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/enquiry.c: fix the listpackage output logic
  * main/filesdb.c: fix error cleanup in ensure_statoverride
  * lib/myopt.[ch]: add myoptfile() so we can read configuration files
  * main/main.c: call new myoptfile()
  * include/Makefile.in, include/dpkg.h.in: add dpkgconfdir

Mon Sep 25 16:19:05 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-divert.pl: don't print version twice on --help

Thu Sep 21 16:29:32 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * debian/shlibs-default.template: removed
  * debian/shlibs-{default,override}: new files
  * debian/rules: install shlibs-{default,override} in /etc/dpkg in dpkg-dev
  * scripts/{dpkg-buildpackage.sh,dpkg-genchanges.pl}: add -S option to only
    upload sources
  * scripts/dpkg-source.1: document new -S option

Sun Sep 17 01:50:34 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.1: document -k option for dpkg-buildpackage

Sat 16 Sep 22:55:49 CEST 2000 peter karlsson <peterk@debian.org>

 * doc/sv/822-date.1, doc/sv/dpkg-split.8: Initial Swedish translation.
 * doc/sv/Makefile.in: Added more Swedish manual pages to install.
 * po/sv.po: Fixes and updates.
