@@ -29,8 +29,9 @@ dpkg (1.7.0) unstable; urgency=low
   * Document -k option for dpkg-buildpackage. Closes: Bug#71808
   * Install dummy shlibs.default and shlibs.override files
   * Give dpkg a configurationfile
-  * dpkg-scanpackages now uses the most recent version if muiltiple versions
+  * dpkg-scanpackages now uses the most recent version if multiple versions
     of a package are found.
+  * don't rename a file to itself in dpkg-source. Closes: Bug#75060
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
