@@ -1,3 +1,8 @@
+Wed Oct 18 17:48:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-source.pl: patch from Colin Watson to not rename a
+    file to itself
+
 Mon Oct 16 10:45:47 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * main/packages.c: Hack up things so a package which
